Structuring error handling in the controller

--- a/src/back-end/src/main/resources/application.yml
+++ b/src/back-end/src/main/resources/application.yml
@@ -5,6 +5,8 @@ spring:
     username: dcanevarollo
     password: j672fb3i
 
-  security:
-    ignored:
-      - "*.bundle.*"
+server:
+  error:
+    whitelabel:
+      enabled: false
+    include-stacktrace: never
