--- a/src/front-end/package.json
+++ b/src/front-end/package.json
@@ -30,6 +30,7 @@
     "@angular/cli": "~10.0.5",
     "@angular/compiler-cli": "~10.0.6",
     "@types/node": "^12.11.1",
+    "prettier": "^2.0.5",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~3.9.5"
