--- a/src/front-end/tsconfig.json
+++ b/src/front-end/tsconfig.json
@@ -6,12 +6,7 @@
 */
 {
   "files": [],
-  "references": [
-    {
-      "path": "./tsconfig.app.json"
-    }
-  ],
-  "compilerOptions": {
-    "experimentalDecorators": true
-  }
+  "references": [{
+    "path": "./tsconfig.app.json"
+  }]
 }
