--- a/src/back-end/package.json
+++ b/src/back-end/package.json
@@ -23,6 +23,7 @@
     "@adonisjs/core": "^5.0.0-preview-rc",
     "@adonisjs/fold": "^6.0.0",
     "@adonisjs/lucid": "^8.4.1",
+    "axios": "^0.19.2",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "luxon": "^1.24.1",
