--- a/src/back-end/.env.example
+++ b/src/back-end/.env.example
@@ -3,8 +3,10 @@ HOST=
 NODE_ENV=
 APP_KEY=
 APP_URL=
-DB_CONNECTION=pg
+DB_CONNECTION=
 DB_HOST=
 DB_USER=
 DB_PASSWORD=
-DB_NAME=dev-binder
+DB_NAME=
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
