--- a/src/front-end/.eslintrc.json
+++ b/src/front-end/.eslintrc.json
@@ -4,6 +4,7 @@
     "camelcase": "off",
     "import/prefer-default-export": "off",
     "react/jsx-props-no-spreading": "off",
+    "jsx-a11y/anchor-is-valid": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off"
   }
 }
