--- a/src/front-end/package.json
+++ b/src/front-end/package.json
@@ -18,7 +18,8 @@
     "react-scripts": "3.4.3",
     "react-toastify": "^6.0.8",
     "styled-components": "^5.1.1",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "yup": "^0.29.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,6 +45,7 @@
   "devDependencies": {
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.2",
+    "@types/yup": "^0.29.7",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
     "eslint-config-airbnb-typescript-prettier": "^3.1.0",
